infrastructure/argocd/apps/infrastructure/security/admin-access/templates/ingress-admin.yaml
# infrastructure/argocd/apps/infrastructure/security/admin-access/templates/ingress-admin.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-tools-ingress
  namespace: argocd
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name:
      { { .Values.groupName | default "management-group" | quote } }
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn:
      { { .Values.certificateArn | quote } }
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: alb
  rules:
    # Route pour ArgoCD
    - host: argocd.core-platform.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
    # Route pour Grafana (Monitoring)
    - host: grafana.core-platform.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-grafana
                port:
                  number: 80
